Fix li spacing bug

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -31,7 +31,7 @@
   margin-top: -1rem;
 }
 
-.row li {
+.reduce-li-spacing {
   margin-top: -0.75rem;
 }
 
